Fix golem overlapping text on golem loot popup

--- a/src/modules/location-hud/event-locations/great-winter-hunt/styles.css
+++ b/src/modules/location-hud/event-locations/great-winter-hunt/styles.css
@@ -581,3 +581,7 @@ button.campHudSnowballShowdownView__buyButton {
 #overlayPopup.greatWinterHuntDialog {
   margin-top: 30px;
 }
+
+.greatWinterHuntClaimRewardDialogView__title {
+  padding-left: 20px;
+}
